Not work serial yet 3/2/2023

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /BiquOperatorPanel/*.user
 /png2c/obj
 /png2c/bin
+BiquOperatorPanel/Megasonic/Communication/secsserial.c~RF15944b6b.TMP
+BiquOperatorPanel/Megasonic/Communication/secsserial.c~RF213383.TMP
