--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /png2c/bin
 BiquOperatorPanel/Megasonic/Communication/secsserial.c~RF15944b6b.TMP
 BiquOperatorPanel/Megasonic/Communication/secsserial.c~RF213383.TMP
+BiquOperatorPanel/Megasonic/Communication/secsserial.c~RF1309f7b7.TMP
+BiquOperatorPanel/Megasonic/TouchLCD/GUI/PanelMain.designer.c~RF25786e1.TMP
+BiquOperatorPanel/Megasonic/TouchLCD/GUI/PanelMain.designer.c~RF25abe8d.TMP
